--- a/style.css
+++ b/style.css
@@ -6,11 +6,6 @@
   font-family: "Alegreya Sans", sans-serif;
 }
 
-body {
-  width: 100vw;
-  overflow-x: hidden;
-}
-
 body p {
   font-weight: 500;
 }
@@ -25,10 +20,8 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: static;
-  width: 97%;
-  margin: 10px 10px 0 10px;
-  background-color: rgba(255, 255, 255, 0);
+  width: 98%;
+  margin: 10px auto;
   padding: 1rem 1.5rem;
 }
 
@@ -118,10 +111,14 @@ nav .nav-links {
           align-items: center;
 }
 
+main {
+  position: relative;
+}
+
 main .hero {
   position: absolute;
   z-index: -1;
-  top: 0;
+  margin-top: -90px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -149,36 +146,41 @@ main .hero .hero-text {
   padding-bottom: 3rem;
 }
 
+main .hero .hero-text #sub-hero .img-container {
+  width: 100%;
+}
+
 main .hero .hero-text .logo {
   margin-bottom: 27rem;
 }
 
 main .hero .hero-text .logo h1 {
   font-weight: 900;
-  font-size: 4em;
+  font-size: clamp(2rem, 5vw, 10rem);
 }
 
 main .hero .hero-text .logo p {
   font-weight: 400;
-  font-size: 1.5em;
+  font-size: clamp(1rem, 5vw, 1.5rem);
   margin-bottom: 1rem;
 }
 
 main .hero .hero-text .logo a {
   text-decoration: none;
   font-weight: 500;
-  color: black;
+  color: #13875e;
   padding: 10px 0 3px 0;
   position: relative;
   -webkit-transition: 2s ease-in-out;
   transition: 2s ease-in-out;
+  font-size: clamp(0.8rem, 5vw, 1rem);
 }
 
 main .hero .hero-text .logo a::before {
   content: "";
   position: absolute;
   top: 100%;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #13875e;
   width: 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -203,7 +205,7 @@ main .hero p {
 main .hero a {
   text-decoration: none;
   font-weight: 500;
-  color: black;
+  color: #13875e;
   padding: 10px 0 3px 0;
   position: relative;
   -webkit-transition: 2s ease-in-out;
@@ -214,7 +216,7 @@ main .hero a::before {
   content: "";
   position: absolute;
   top: 100%;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #13875e;
   width: 0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
