--- a/query/query.css
+++ b/query/query.css
@@ -1,7 +1,36 @@
+@media screen and (max-width: 1250px) {
+  main .hero .hero-text .logo {
+    margin-bottom: 15rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  main .hero .hero-text .logo {
+    margin-bottom: 10rem;
+  }
+}
+
+@media screen and (max-width: 880px) {
+  main .hero .hero-text .logo {
+    margin-bottom: 5rem;
+  }
+}
+
 @media screen and (max-width: 768px) {
+  body.query-active {
+    background-color: rgba(0, 0, 0, 0.719);
+    -webkit-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+  }
+  main .hero .hero-text .logo {
+    margin-bottom: 3rem;
+  }
   nav .logo ul,
   nav .second-links {
     display: none;
+  }
+  nav {
+    margin: 10px auto;
   }
   nav .logo {
     margin: 0;
@@ -38,7 +67,7 @@
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
     width: 97.5%;
-    height: 97.5vh;
+    height: 95vh;
     background-color: white;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -54,6 +83,89 @@
   }
   nav .query {
     display: none;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  nav {
+    z-index: 100000;
+    background-color: white;
+  }
+  main .hero {
+    z-index: -10;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  main .hero .img-container {
+    width: 100vw;
+  }
+  main .hero .hero-text {
+    width: 100vw;
+    margin: 0;
+  }
+  main .hero .hero-text .logo {
+    background-color: white;
+    border-radius: 5px;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -45%);
+            transform: translate(-50%, -45%);
+    width: 350px;
+    padding: 1rem;
+  }
+  main .hero .hero-text .logo h1 {
+    text-align: center;
+  }
+  main .hero .hero-text .logo a {
+    text-align: center;
+    color: #13875e;
+  }
+  main .hero .hero-text #sub-hero {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-top: -5px;
+  }
+  main .hero .hero-text #sub-hero .img-container {
+    width: 50%;
+    margin-right: 1rem;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  main .hero .hero-text #sub-hero {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  main .hero .hero-text #sub-hero .img-container {
+    width: 100vw;
+    margin: 0;
+  }
+  main .hero .hero-text #sub-hero .img-container img {
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  main .hero .hero-text .logo {
+    top: 35%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -35%);
+            transform: translate(-50%, -35%);
+  }
+}
+
+@media screen and (max-width: 320px) {
+  main .hero .hero-text .logo {
+    width: 280px;
   }
 }
 /*# sourceMappingURL=query.css.map */
