--- a/query/query.scss
+++ b/query/query.scss
@@ -1,12 +1,48 @@
-@media screen and (max-width: 1024px) {
-}
+$pcolor: #13875e;
+$picture-background: #d4d4d4;
+$p-wieght: 500;
 
+@media screen and (max-width: 1250px) {
+  main {
+    .hero {
+      .hero-text {
+        .logo {
+          margin-bottom: 15rem;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 1024px) {
+  main {
+    .hero {
+      .hero-text {
+        .logo {
+          margin-bottom: 10rem;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 880px) {
+  main .hero .hero-text .logo {
+    margin-bottom: 5rem;
+  }
+}
 @media screen and (max-width: 768px) {
+  body.query-active {
+    background-color: rgba(0, 0, 0, 0.719);
+    transition: 0.3s ease-in-out;
+  }
+  main .hero .hero-text .logo {
+    margin-bottom: 3rem;
+  }
   nav .logo ul,
   nav .second-links {
     display: none;
   }
   nav {
+    margin: 10px auto;
     .logo {
       margin: 0;
       width: auto;
@@ -39,7 +75,7 @@
       left: 50%;
       transform: translate(-50%, -50%);
       width: 97.5%;
-      height: 97.5vh;
+      height: 95vh;
       background-color: rgb(255, 255, 255);
       flex-direction: column;
       text-align: center;
@@ -51,5 +87,74 @@
     .query {
       display: none;
     }
+  }
+}
+@media screen and (max-width: 720px) {
+  nav {
+    z-index: 100000;
+    background-color: white;
+  }
+  main .hero {
+    z-index: -10;
+    flex-direction: column;
+    .img-container {
+      width: 100vw;
+    }
+    .hero-text {
+      width: 100vw;
+      margin: 0;
+      .logo {
+        background-color: white;
+        border-radius: 5px;
+        position: absolute;
+        top: 45%;
+        left: 50%;
+        transform: translate(-50%, -45%);
+        width: 350px;
+        padding: 1rem;
+        h1 {
+          text-align: center;
+        }
+        a {
+          text-align: center;
+          color: $pcolor;
+        }
+      }
+      #sub-hero {
+        display: flex;
+        align-items: center;
+        // position: relative;
+        // z-index: -11;
+        margin-top: -5px;
+        .img-container {
+          width: 50%;
+          margin-right: 1rem;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 520px) {
+  main .hero .hero-text #sub-hero {
+    flex-direction: column;
+    .img-container {
+      width: 100vw;
+      margin: 0;
+      img {
+        height: 300px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 375px) {
+  main .hero .hero-text .logo {
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -35%);
+  }
+}
+@media screen and (max-width: 320px) {
+  main .hero .hero-text .logo {
+    width: 280px;
   }
 }
