--- a/style.scss
+++ b/style.scss
@@ -9,8 +9,8 @@ $p-wieght: 500;
   font-family: "Alegreya Sans", sans-serif;
 }
 body {
-  width: 100vw;
-  overflow-x: hidden;
+  // width: 100vw;
+  // overflow-x: hidden;
   p {
     font-weight: $p-wieght;
   }
@@ -19,10 +19,8 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: static;
-  width: 97%;
-  margin: 10px 10px 0 10px;
-  background-color: rgba(255, 255, 255, 0);
+  width: 98%;
+  margin: 10px auto;
   padding: 1rem 1.5rem;
   .nav-bar {
     display: none;
@@ -78,10 +76,11 @@ nav {
   }
 }
 main {
+  position: relative;
   .hero {
     position: absolute;
     z-index: -1;
-    top: 0;
+    margin-top: -90px;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -96,30 +95,34 @@ main {
       margin-left: 1.5rem;
       width: 25vw;
       padding-bottom: 3rem;
+      #sub-hero .img-container {
+        width: 100%;
+      }
       .logo {
         margin-bottom: 27rem;
         h1 {
           font-weight: 900;
-          font-size: 4em;
+          font-size: clamp(2rem, 5vw, 10rem);
         }
         p {
           font-weight: 400;
-          font-size: 1.5em;
+          font-size: clamp(1rem, 5vw, 1.5rem);
           margin-bottom: 1rem;
         }
         a {
           text-decoration: none;
           font-weight: $p-wieght;
-          color: black;
+          color: $pcolor;
           padding: 10px 0 3px 0;
           position: relative;
           transition: 2s ease-in-out;
+          font-size: clamp(0.8rem, 5vw, 1rem);
         }
         a::before {
           content: "";
           position: absolute;
           top: 100%;
-          border-bottom: 1px solid black;
+          border-bottom: 1px solid $pcolor;
           width: 0;
           transition: 0.3s;
         }
@@ -140,7 +143,7 @@ main {
     a {
       text-decoration: none;
       font-weight: $p-wieght;
-      color: black;
+      color: $pcolor;
       padding: 10px 0 3px 0;
       position: relative;
       transition: 2s ease-in-out;
@@ -149,7 +152,7 @@ main {
       content: "";
       position: absolute;
       top: 100%;
-      border-bottom: 1px solid black;
+      border-bottom: 1px solid $pcolor;
       width: 0;
       transition: 0.3s;
     }
