--- a/style.css
+++ b/style.css
@@ -21,8 +21,13 @@ nav {
       -ms-flex-align: center;
           align-items: center;
   width: 98%;
-  margin: 10px auto;
+  margin-top: 10px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   padding: 1rem 1.5rem;
+  position: fixed;
+  z-index: 1000;
 }
 
 nav .nav-bar {
@@ -116,12 +121,10 @@ main {
 }
 
 main .hero {
-  position: absolute;
-  z-index: -1;
-  margin-top: -90px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding-right: 20px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -141,7 +144,6 @@ main .hero .img-container img {
 }
 
 main .hero .hero-text {
-  margin-left: 1.5rem;
   width: 25vw;
   padding-bottom: 3rem;
 }
@@ -174,6 +176,7 @@ main .hero .hero-text .logo a {
   -webkit-transition: 2s ease-in-out;
   transition: 2s ease-in-out;
   font-size: clamp(0.8rem, 5vw, 1rem);
+  cursor: pointer;
 }
 
 main .hero .hero-text .logo a::before {
@@ -210,6 +213,7 @@ main .hero a {
   position: relative;
   -webkit-transition: 2s ease-in-out;
   transition: 2s ease-in-out;
+  cursor: pointer;
 }
 
 main .hero a::before {
@@ -224,5 +228,73 @@ main .hero a::before {
 
 main .hero a:hover::before {
   width: 100%;
+}
+
+main .section-one {
+  margin-top: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+main .section-one .box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 400px;
+}
+
+main .section-one .box .img-container {
+  width: 200px;
+}
+
+main .section-one .box img {
+  width: 100%;
+  height: 300px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+main .section-one .box .text-container p {
+  margin-bottom: 0.5rem;
+}
+
+main .section-one .box a {
+  text-decoration: none;
+  font-weight: 500;
+  color: #13875e;
+  padding: 10px 0 3px 0;
+  position: relative;
+  -webkit-transition: 2s ease-in-out;
+  transition: 2s ease-in-out;
+  cursor: pointer;
+}
+
+main .section-one .box a::before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  border-bottom: 1px solid #13875e;
+  width: 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+main .section-one .box a:hover::before {
+  width: 100%;
+}
+
+main .section-one .box:not(:last-child) {
+  margin-bottom: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
