--- a/query/query.scss
+++ b/query/query.scss
@@ -30,14 +30,14 @@ $p-wieght: 500;
   }
 }
 @media screen and (max-width: 768px) {
-  body.query-active {
+  body.overlay {
     background-color: rgba(0, 0, 0, 0.719);
     transition: 0.3s ease-in-out;
   }
   main .hero .hero-text .logo {
     margin-bottom: 3rem;
   }
-  nav .logo ul,
+  nav .logo .first-links,
   nav .second-links {
     display: none;
   }
@@ -71,11 +71,12 @@ $p-wieght: 500;
     .query.query-active {
       display: flex;
       position: fixed;
-      top: 50%;
+      top: -1.5%;
       left: 50%;
-      transform: translate(-50%, -50%);
-      width: 97.5%;
-      height: 95vh;
+      transform: translate(-50%, -1.5%);
+      margin-top: 10px;
+      width: 100%;
+      height: 96vh;
       background-color: rgb(255, 255, 255);
       flex-direction: column;
       text-align: center;
@@ -90,6 +91,9 @@ $p-wieght: 500;
   }
 }
 @media screen and (max-width: 720px) {
+  main .hero {
+    padding: 0;
+  }
   nav {
     z-index: 100000;
     background-color: white;
@@ -103,13 +107,14 @@ $p-wieght: 500;
     .hero-text {
       width: 100vw;
       margin: 0;
+      padding-bottom: 0;
       .logo {
         background-color: white;
         border-radius: 5px;
         position: absolute;
-        top: 45%;
+        top: 25%;
         left: 50%;
-        transform: translate(-50%, -45%);
+        transform: translate(-50%, -25%);
         width: 350px;
         padding: 1rem;
         h1 {
@@ -133,6 +138,42 @@ $p-wieght: 500;
       }
     }
   }
+  main {
+    .section-one {
+      width: 95%;
+      margin: 2rem auto;
+      .box-one {
+        flex-direction: column;
+        width: 100%;
+        .img-container {
+          width: 100%;
+          img {
+            height: 800px;
+          }
+        }
+        .text-container {
+          width: 100%;
+        }
+      }
+      .box {
+        // border: 1px solid black;
+      }
+      .box-two,
+      .box-three {
+        width: 50%;
+        flex-direction: column;
+        .img-container {
+          width: 95%;
+        }
+        img {
+          height: 500px;
+        }
+        .text-container {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 @media screen and (max-width: 520px) {
   main .hero .hero-text #sub-hero {
@@ -144,6 +185,13 @@ $p-wieght: 500;
         height: 300px;
       }
     }
+  }
+}
+@media screen and (max-width: 425px) {
+  main .hero .hero-text .logo {
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -15%);
   }
 }
 @media screen and (max-width: 375px) {
