--- a/query/query.css
+++ b/query/query.css
@@ -17,11 +17,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  body.overlay {
-    background-color: rgba(0, 0, 0, 0.719);
-    -webkit-transition: 0.3s ease-in-out;
-    transition: 0.3s ease-in-out;
-  }
   main .hero .hero-text .logo {
     margin-bottom: 3rem;
   }
@@ -141,6 +136,10 @@
     width: 50%;
     margin-right: 1rem;
   }
+  main .hero .hero-text #sub-hero .text-container {
+    width: 100%;
+    text-align: center;
+  }
   main .section-one {
     width: 95%;
     margin: 2rem auto;
@@ -168,10 +167,11 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    margin-bottom: 1rem;
   }
   main .section-one .box-two .img-container,
   main .section-one .box-three .img-container {
-    width: 95%;
+    width: 97%;
   }
   main .section-one .box-two img,
   main .section-one .box-three img {
@@ -180,6 +180,18 @@
   main .section-one .box-two .text-container,
   main .section-one .box-three .text-container {
     width: 100%;
+  }
+  main .section-one .box:not(:first-child) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  main .hero .hero-text .logo {
+    top: 15%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -15%);
+            transform: translate(-50%, -15%);
   }
 }
 
@@ -201,25 +213,43 @@
 
 @media screen and (max-width: 425px) {
   main .hero .hero-text .logo {
-    top: 15%;
+    top: 10%;
     left: 50%;
-    -webkit-transform: translate(-50%, -15%);
-            transform: translate(-50%, -15%);
+    -webkit-transform: translate(-50%, -10%);
+            transform: translate(-50%, -10%);
+  }
+  nav {
+    width: 95%;
+  }
+  main .section-one .box:not(:first-child) {
+    width: 100%;
+  }
+  main .section-one .box:not(:first-child) .img-container {
+    width: 100%;
+  }
+  main .section-one .box:nth-child(2) {
+    margin-bottom: 1rem;
   }
 }
 
 @media screen and (max-width: 375px) {
   main .hero .hero-text .logo {
-    top: 35%;
+    top: 12%;
     left: 50%;
-    -webkit-transform: translate(-50%, -35%);
-            transform: translate(-50%, -35%);
+    -webkit-transform: translate(-50%, -12%);
+            transform: translate(-50%, -12%);
   }
 }
 
 @media screen and (max-width: 320px) {
   main .hero .hero-text .logo {
     width: 280px;
+  }
+  main .hero .hero-text .logo {
+    top: 8%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -8%);
+            transform: translate(-50%, -8%);
   }
 }
 /*# sourceMappingURL=query.css.map */
