--- a/query/query.scss
+++ b/query/query.scss
@@ -3,6 +3,7 @@ $picture-background: #d4d4d4;
 $p-wieght: 500;
 
 @media screen and (max-width: 1250px) {
+  //////////////////////////////////////////////1250px
   main {
     .hero {
       .hero-text {
@@ -14,6 +15,7 @@ $p-wieght: 500;
   }
 }
 @media screen and (max-width: 1024px) {
+  //////////////////////////////////////////////1024px
   main {
     .hero {
       .hero-text {
@@ -25,15 +27,13 @@ $p-wieght: 500;
   }
 }
 @media screen and (max-width: 880px) {
+  //////////////////////////////////////////////880px
   main .hero .hero-text .logo {
     margin-bottom: 5rem;
   }
 }
 @media screen and (max-width: 768px) {
-  body.overlay {
-    background-color: rgba(0, 0, 0, 0.719);
-    transition: 0.3s ease-in-out;
-  }
+  //////////////////////////////////////////////7680px
   main .hero .hero-text .logo {
     margin-bottom: 3rem;
   }
@@ -91,6 +91,7 @@ $p-wieght: 500;
   }
 }
 @media screen and (max-width: 720px) {
+  //////////////////////////////////////////////720px
   main .hero {
     padding: 0;
   }
@@ -135,6 +136,10 @@ $p-wieght: 500;
           width: 50%;
           margin-right: 1rem;
         }
+        .text-container {
+          width: 100%;
+          text-align: center;
+        }
       }
     }
   }
@@ -162,8 +167,9 @@ $p-wieght: 500;
       .box-three {
         width: 50%;
         flex-direction: column;
+        margin-bottom: 1rem;
         .img-container {
-          width: 95%;
+          width: 97%;
         }
         img {
           height: 500px;
@@ -172,10 +178,22 @@ $p-wieght: 500;
           width: 100%;
         }
       }
+      .box:not(:first-child) {
+        margin-bottom: 0;
+      }
     }
   }
 }
+@media screen and (max-width: 560px) {
+  //////////////////////////////////////////////560px
+  main .hero .hero-text .logo {
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -15%);
+  }
+}
 @media screen and (max-width: 520px) {
+  //////////////////////////////////////////////520px
   main .hero .hero-text #sub-hero {
     flex-direction: column;
     .img-container {
@@ -188,21 +206,43 @@ $p-wieght: 500;
   }
 }
 @media screen and (max-width: 425px) {
+  //////////////////////////////////////////////425px
   main .hero .hero-text .logo {
-    top: 15%;
+    top: 10%;
     left: 50%;
-    transform: translate(-50%, -15%);
+    transform: translate(-50%, -10%);
+  }
+  nav {
+    width: 95%;
+  }
+  main .section-one {
+    .box:not(:first-child) {
+      width: 100%;
+      .img-container {
+        width: 100%;
+      }
+    }
+    .box:nth-child(2) {
+      margin-bottom: 1rem;
+    }
   }
 }
 @media screen and (max-width: 375px) {
+  //////////////////////////////////////////////375px
   main .hero .hero-text .logo {
-    top: 35%;
+    top: 12%;
     left: 50%;
-    transform: translate(-50%, -35%);
+    transform: translate(-50%, -12%);
   }
 }
 @media screen and (max-width: 320px) {
+  //////////////////////////////////////////////320px
   main .hero .hero-text .logo {
     width: 280px;
+  }
+  main .hero .hero-text .logo {
+    top: 8%;
+    left: 50%;
+    transform: translate(-50%, -8%);
   }
 }
