--- a/style.css
+++ b/style.css
@@ -10,6 +10,21 @@ body p {
   font-weight: 500;
 }
 
+body .overlayer {
+  position: fixed;
+  z-index: 100;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+body .overlayer.overlayed {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 100vw;
+  height: 100vh;
+}
+
 nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -296,5 +311,131 @@ main .section-one .box a:hover::before {
 
 main .section-one .box:not(:last-child) {
   margin-bottom: 1rem;
+}
+
+main .section-two {
+  width: 95%;
+  margin: auto;
+  margin-top: 2rem;
+}
+
+main .section-two h2 {
+  margin: 0 0 1.5rem 0;
+  font-size: clamp(2rem, 2vw, 2rem);
+}
+
+main .section-two .product-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .section-two .product-container .box {
+  width: 400px;
+}
+
+main .section-two .product-container .box .img-container {
+  height: 350px;
+  margin-bottom: 0.5rem;
+  background-color: #e7e7e7;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  position: relative;
+}
+
+main .section-two .product-container .box .img-container img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+main .section-two .product-container .box .img-container #img-change {
+  display: block;
+}
+
+main .section-two .product-container .box .img-container #img-changed {
+  display: none;
+  -o-object-fit: contain;
+     object-fit: contain;
+  height: 100%;
+}
+
+main .section-two .product-container .box .img-container #arrow {
+  display: none;
+}
+
+main .section-two .product-container .box .img-container:hover::before {
+  content: "";
+  position: absolute;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.397);
+}
+
+main .section-two .product-container .box .img-container:hover #arrow {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  height: 70px;
+  width: 70px;
+  background-color: #e7e7e7;
+  padding: 0.5rem;
+  border-radius: 50%;
+  z-index: 100;
+  -webkit-animation: shopee 0.3s;
+          animation: shopee 0.3s;
+}
+
+@-webkit-keyframes shopee {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes shopee {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+main .section-two .product-container .box .text-container h3 {
+  color: #13875e;
 }
 /*# sourceMappingURL=style.css.map */
