done section-two

--- a/query/query.css
+++ b/query/query.css
@@ -2,11 +2,17 @@
   main .hero .hero-text .logo {
     margin-bottom: 15rem;
   }
+  main .section-two .product-container .box {
+    width: 350px;
+  }
 }
 
 @media screen and (max-width: 1024px) {
   main .hero .hero-text .logo {
     margin-bottom: 10rem;
+  }
+  main .section-two .product-container .box {
+    width: 300px;
   }
 }
 
@@ -79,6 +85,9 @@
   }
   nav .query {
     display: none;
+  }
+  main .section-two .product-container .box {
+    width: 350px;
   }
 }
 
@@ -184,6 +193,9 @@
   main .section-one .box:not(:first-child) {
     margin-bottom: 0;
   }
+  main .section-two .product-container .box {
+    width: 320px;
+  }
 }
 
 @media screen and (max-width: 560px) {
@@ -229,6 +241,9 @@
   }
   main .section-one .box:nth-child(2) {
     margin-bottom: 1rem;
+  }
+  main .section-two .product-container .box {
+    width: 100%;
   }
 }
 
