--- a/style.css
+++ b/style.css
@@ -319,8 +319,7 @@ main .section-one .box:not(:last-child) {
 
 main .section-two {
   width: 95%;
-  margin: auto;
-  margin-top: 2rem;
+  margin: 2rem auto;
 }
 
 main .section-two h2 {
@@ -343,7 +342,7 @@ main .section-two .product-container {
 }
 
 main .section-two .product-container .box {
-  width: 400px;
+  width: 31%;
   margin-bottom: 1rem;
 }
 
@@ -434,8 +433,8 @@ main .section-two .product-container .box .img-container:hover #arrow {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  height: 70px;
-  width: 70px;
+  height: 60px;
+  width: 60px;
   background-color: #ececec;
   padding: 0.5rem;
   border-radius: 50%;
@@ -445,6 +444,146 @@ main .section-two .product-container .box .img-container:hover #arrow {
 }
 
 main .section-two .product-container .box .text-container h3 {
+  color: #13875e;
+}
+
+main .section-three {
+  width: 95%;
+  margin: 2rem auto 10rem auto;
+}
+
+main .section-three .box-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main .section-three .box-container .box {
+  width: 49%;
+}
+
+main .section-three .box-container .box img {
+  width: 100%;
+  height: 400px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+main footer {
+  padding: 1rem 0;
+}
+
+main footer .box-container {
+  width: 95%;
+  margin: 1rem auto 2rem auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+main footer .box-container .box {
+  width: 14%;
+  word-break: break-all;
+}
+
+main footer .box-container .box .title-container {
+  margin-bottom: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main footer .box-container .box .title-container .cross {
+  display: none;
+}
+
+main footer .box-container .box p {
+  line-height: 23px;
+}
+
+main footer .box-container .box a {
+  text-decoration: none;
+  color: black;
+}
+
+main footer .box-container .box a:hover {
+  color: #13875e;
+}
+
+main footer .box-container .box:nth-child(1) {
+  width: 27%;
+}
+
+main footer .footer-message {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-bottom: 1rem;
+}
+
+main footer .footer-message form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main footer .footer-message form input {
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.651);
+  outline: none;
+  font-size: 1rem;
+  padding: 0 5px;
+  margin-left: 5px;
+}
+
+main footer .footer-message form button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  color: #13875e;
+  background-color: rgba(0, 0, 0, 0);
+  padding: 10px;
+  font-size: 1rem;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+main footer .footer-message form button:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+main footer .footer-message .outro h3 span {
+  text-transform: uppercase;
   color: #13875e;
 }
 /*# sourceMappingURL=style.css.map */
