--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -7,7 +11,7 @@
 }
 
 body {
-  background-color: white;
+  background-color: #fafafa;
 }
 
 body p {
@@ -103,6 +107,7 @@ nav .logo {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 350px;
+  cursor: pointer;
 }
 
 nav .logo h1 {
